# gds_fdtd

./: .buildinfo  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  MODERNIZATION_PLAN.md  Makefile  README.md  ROADMAP.md  SECURITY.md  SOLVER_STATUS.md  architecture.html  bragg_te1550_with_extensions.gds  examples.html  genindex.html  index.html  justfile  modules.html  multimodal.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  simulations.html  solvers.html  sparameters.html  technology.html
.clusterfuzzlite/: Dockerfile  build.sh
.doctrees/: architecture.doctree  environment.pickle  examples.doctree  index.doctree  modules.doctree
.doctrees/_autosummary/: gds_fdtd.core.doctree  gds_fdtd.lum_tools.doctree  gds_fdtd.lyprocessor.doctree  gds_fdtd.simprocessor.doctree  gds_fdtd.t3d_tools.doctree
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_and_test.yml  build_docs.yml  cflite-pr.yml  ci.yml  cloud-smoke.yml  fuzz.yml  jekyll-gh-pages.yml  lower_bounds.yml  lumerical-nightly.yml  python-publish.yml  release.yml  scorecard.yml  security.yml
_autosummary/: gds_fdtd.core.html  gds_fdtd.logging_config.html  gds_fdtd.lum_tools.html  gds_fdtd.lyprocessor.html  gds_fdtd.simprocessor.html  gds_fdtd.solver.html  gds_fdtd.solver_lumerical.html  gds_fdtd.solver_tidy3d.html  gds_fdtd.sparams.html  gds_fdtd.t3d_tools.html
_sources/: architecture.rst.txt  examples.rst.txt  index.rst.txt  modules.rst.txt  multimodal.rst.txt  simulations.rst.txt  solvers.rst.txt  sparameters.rst.txt  technology.rst.txt
_sources/_autosummary/: gds_fdtd.core.rst.txt  gds_fdtd.logging_config.rst.txt  gds_fdtd.lyprocessor.rst.txt  gds_fdtd.solver.rst.txt  gds_fdtd.solver_lumerical.rst.txt  gds_fdtd.solver_tidy3d.rst.txt
crossing_te1550/: crossing_te1550.gds
directional_coupler_te1550/: directional_coupler_te1550.gds
docs/: adding_a_solver.md  architecture.rst  conf.py  examples.rst  frontends.rst  index.rst  modules.rst  multimodal.rst  remote_compute.md  self_hosted_runner.md  simulations.rst  solvers.rst  sparameters.rst  technology.rst
docs/_autosummary/: gds_fdtd.core.rst  gds_fdtd.logging_config.rst  gds_fdtd.lum_tools.rst  gds_fdtd.lyprocessor.rst  gds_fdtd.simprocessor.rst  gds_fdtd.solver.rst  gds_fdtd.solver_lumerical.rst  gds_fdtd.solver_tidy3d.rst  gds_fdtd.sparams.rst  gds_fdtd.t3d_tools.rst
examples/: README.md  devices.gds  tech.yaml  tech_lumerical.yaml  tech_tidy3d.yaml
examples/00_quickstart/: 00_quickstart.ipynb  00_quickstart.py
examples/01_basics/: 01a_directional_coupler_tidy3d.py  01b_crossing_tidy3d.py  01b_load_and_inspect.py
examples/01_layout_to_component/: 01_layout_to_component.ipynb  01_layout_to_component.py
examples/02_lumerical/: 02a_lumerical.py  02b_lumerical_convergence.py  02b_tidy3d.py
examples/02_technology/: 02_technology.ipynb  02_technology.py  02b_rii_to_engines.ipynb  02b_rii_to_engines.py
examples/03_first_simulation/: 03_first_simulation.ipynb  03_first_simulation.py
examples/03_import_technology/: 03a_escalator_tidy3d.py  03b_convergence_tidy3d.py
examples/03_tidy3d/: 03a_tidy3d.py  03b_tidy3d_convergence.py
examples/04_dual_polarization/: 04a_bragg_te_tidy3d.py
examples/04_reading_results/: 04_reading_results.ipynb  04_reading_results.py
examples/04_solvers/: 04a_solver_registry.py  04b_convergence_and_caching.py  04c_cross_solver_validation.py
examples/05_dual_polarization/: 05a_si_sin_escalator.py
examples/05_fields_and_modes/: 05_fields_and_modes.ipynb  05_fields_and_modes.py  05b_field_monitors.ipynb  05b_field_monitors.py
examples/05_gdsfactory/: 05a_gf_bend.py
examples/06_beamz/: 06a_beamz_straight.py  06b_beamz_bend.py  06c_beamz_convergence.py
examples/06_convergence_and_caching/: 06_convergence_and_caching.ipynb  06_convergence_and_caching.py
examples/06_lumerical/: 06a_lumerical.py  06a_to_lumerical.py  06b_fdtd_lumerical.py
examples/07_choosing_an_engine/: 07_choosing_an_engine.ipynb  07_choosing_an_engine.py
examples/07_lumerical/: 07b_fdtd_lumerical.py  wg.gds
examples/07_prefab/: 07a_prefab_tidy3d.py
examples/08_frontends/: 08_frontends.ipynb  08_frontends.py
examples/08_siepic/: 08a_siepic_lumerical.py  08a_siepic_tidy3d.py
examples/09_cli_and_jobs/: 09_cli_and_jobs.ipynb  09_cli_and_jobs.py
examples/09_siepic/: 09a_siepic_halfring  09a_siepic_lumerical.py  09a_siepic_tidy3d.py  tech.yaml
examples/09_smatrix/: 09a_smatrix_io.py
examples/10_cookbook/: 10_cookbook.ipynb  10_cookbook.py  10b_polarization.ipynb  10b_polarization.py  si_sin_escalator.gds
examples/10_materials/: 10a_technology_and_rii.py
examples/11_bragg_grating/: 11_bragg_grating.ipynb  11_bragg_grating.py
fuzz/: fuzz_dat.py  fuzz_technology.py
gds_fdtd/: __init__.py  core.py  logging_config.py  lum_tools.py  lyprocessor.py  simprocessor.py  solver.py  solver_lumerical.py  solver_tidy3d.py  sparams.py  t3d_tools.py
scripts/: cloud_smoke.py  release.sh
src/gds_fdtd/: __init__.py  _sparams.py  caching.py  cli.py  convergence.py  core.py  errors.py  extraction.py  (+17 more)
tests/: __init__.py  conftest.py  tech_lumerical.yaml  tech_tidy3d.yaml  tech_unified.yaml  test_convergence.py  test_core.py  test_core_shims.py  test_coverage_gaps.py  test_deprecation.py  test_engines_e2e.py  test_errors_settings.py  test_examples_importable.py  test_execution_cli.py  test_extraction.py  test_field_monitors.py  test_gdsfactory.py  test_golden.py  test_grid.py  test_lyprocessor.py  test_materials_rii.py  test_materials_select.py  test_modes.py  test_plotting.py  test_properties.py  test_recorded_artifacts.py  test_release_coverage.py  test_simprocessor.py  test_simprocessor_materials.py  test_smatrix.py  test_solver.py  test_solver_lumerical_mocked.py  test_solver_tidy3d.py  test_solver_tidy3d_mocked.py  test_solvers_adapters.py  test_sparams.py  test_sparams_recorded.py  test_spec.py  test_technology.py  test_technology_v2.py  (+1 more)
(+84 files in other folders)
