# pyproject.toml - gds_fdtd


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# ────────────────────────── project meta ─────────────────────────
[project]
name            = "gds_fdtd"
dynamic         = ["version"]
description     = "Minimalist utilities for photonic FDTD workflows."
authors         = [{ name = "Mustafa Hammood", email = "mustafa@siepic.com" }]
license         = { text = "MIT" }
readme          = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11,<3.15"
keywords        = [
  "python", "photonics", "fdtd", "simulation", "optics",
  "eda", "electromagnetics", "gds", "silicon-photonics"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]

# ─────────────── core runtime (always installed) ───────────────
dependencies = [
  "numpy>=1.25",
  "klayout>=0.30.1",
  "matplotlib>=3.8",
  "shapely>=2.0",
  "PyYAML>=6.0",
  "pydantic>=2.7"
]

# ──────────────── optional feature / tool sets ────────────────
[project.optional-dependencies]

tidy3d      = ["tidy3d>=2.11,<3"]              # enables gds_fdtd.solver_tidy3d (2.8.x is numpy<2/py<=3.12 only; F5)
gdsfactory  = ["gdsfactory>=9.5.7,<10"]
prefab      = ["prefab>=1.2.0"]
siepic      = ["SiEPIC>=0.5.25"]

dev = [
  "pip>=23.3",
  "wheel>=0.42.0",
  "build>=1.0.0",
  "twine>=4.0.2",
  "watchdog>=3.0.0",
  "pytest>=8.1",
  "pytest-cov>=5.0",
  "coverage",
  "ruff>=0.4.3",
  "mypy>=1.10",
  "h5py>=3.10",  # SMatrix HDF5 I/O tests (optional at runtime)
]

docs = [
  "sphinx>=7.0",
  "sphinx-rtd-theme>=1.2.0",
  "docutils<0.23",
  "sphinx-toggleprompt>=0.1.0",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.5.0",
  "furo>=2024.08.06",
]

# ─────────────── solver plugin entry points (WP3.1e) ───────────────
[project.entry-points."gds_fdtd.solvers"]
tidy3d    = "gds_fdtd.solvers.tidy3d:Tidy3DSolver"
lumerical = "gds_fdtd.solvers.lumerical:LumericalSolver"

# ───────────────────────── project links ────────────────────────
[project.urls]
Homepage    = "https://github.com/SiEPIC/gds_fdtd"
Repository  = "https://github.com/SiEPIC/gds_fdtd"
"Bug Tracker" = "https://github.com/SiEPIC/gds_fdtd/issues"

# ─────────────────────────── tooling ────────────────────────────
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/gds_fdtd"]

[tool.pytest.ini_options]
addopts = "-q"
filterwarnings = [
  "error::DeprecationWarning:gds_fdtd.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"
# examples/ are legacy and get rewritten in WP6.1; they join lint scope there.
extend-exclude = ["examples"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "A", "C4"]
# Temporary ignores — each is scheduled for a proper fix in MODERNIZATION_PLAN.md.
# Do NOT silently fix these in unrelated PRs; remove each ignore in its owning WP.
ignore = [
  "E501",  # long comments/strings; wrapped progressively as files are touched in Phase 1/2
  "B006",  # mutable default arguments — fixed properly in WP1.2 (bug B17)
  "E722",  # bare except in solver_lumerical — hardened in WP3.2
  "B904",  # raise-without-from — exception hierarchy lands in WP7.6
  "F841",  # unused vars incl. catalogued bugs B8/B11/B13 — fixed in Phase 1, not here
  "UP031", # %-formatting in .dat writer — rewritten in WP2.4b (numeric behavior risk)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "A003"]

[tool.mypy]
plugins = ["pydantic.mypy"]
# no python_version pin: analyze under the running interpreter (numpy 2.x stubs need >=3.12)
ignore_missing_imports = true
check_untyped_defs = true